--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -44,12 +44,12 @@
 </head>
 <body>
 
-{% for product in product_list %}
+{% for object in object_list %}
 <div class="col-3">
     <div class="card mb-4 box-shadow">
-        <img class="card-img-top" src="{{ product.product_preview|mymedia }}" alt="Card image cap">
+        <img class="card-img-top" src="{{ object.product_preview|mymedia }}" alt="Card image cap">
         <div class="dropdown">
-            <button type="submit" class="dropbtn btn btn-light from-control">{{ product|capfirst }}</button>
+            <button type="submit" class="dropbtn btn btn-light from-control">{{ object|capfirst }}</button>
             <div class="dropdown-content">
                 {% include 'includes/inc_catalog_description.html' %}
             </div>
