отоброжение slug в поисковой строке добавлено

--- a/blog/templates/blog/blog_confirm_delete.html
+++ b/blog/templates/blog/blog_confirm_delete.html
@@ -10,7 +10,7 @@
                             {% csrf_token %}
                             <p>Хотите удалить "{{object.title}}"?</p>
                             <button type="submit" class="btn bth-dander">Подтвердить удаление</button>
-                            <a href="{% url 'blog:list' %}" class="btn bth-warning">Отмена</a>
+                            <a href="{% url 'blog:index' %}" class="btn bth-warning">Отмена</a>
                         </form>
                     </div>
                 </div>
