--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -16,7 +16,7 @@
                                     Создать
                                 {% endif %}
                             </button>
-                            <a href="{% url 'blog:list' %}" class="btn bth-warning">Отмена</a>
+                            <a href="{% url 'blog:index' %}" class="btn bth-warning">Отмена</a>
                         </form>
                     </div>
                 </div>
