--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -9,7 +9,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a href="{% url 'blog:view' object.pk %}"
+                            <a href="{% url 'blog:view' object.slug %}"
                                class="btn btn-sm btn-outline-secondary">Просмотр</a>
                         </div>
                     </div>
