--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -7,7 +7,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h3 class="card-title">
-                            Информация "{{object.title}}" ({{ object.slug }})
+                            Статья "{{object.title}}"
                         </h3>
                     </div>
                     <div class="card-body">
